# libucrcourse

./: .gitattributes  .gitignore  API.txt  CMakeLists.txt  LICENSE.md  README.md  blob.js  constants.js  dataconvert.js  lib.js  main.js  sample.html
blob/: params_dict.txt  params_dict_unquoted.txt
cmake/: CheckIncludes.cmake
include/: ucrcourse.h
scripts/: print_params.py  print_tag_parts.py
src/: CMakeLists.txt  blob.c  blob.h  constants.c  constants.h  externals.c  extract.c  extract.h  file.c  file.h  html_scraper.c  html_scraper.h  long_parse.c  long_parse.h  params.c  params.h  parse.c  parse.h  query.c  query.h  request.c  request.h  scrape.c  scrape.h  slice.c  slice.h  string_buffer.c  string_buffer.h
src/test/: main.c
